hphp/hack/test/typecheck/strict_switch/nullable_bool_not_bool.php.exp
File "nullable_bool_not_bool.php", line 27, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `true`, `false` (Typing[4019])
